<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shizq.bika.ui.main.MainActivity">

    <item
        android:enabled="false"
        android:title="@string/action_sort" />
    <item
        android:id="@+id/dd"
        android:orderInCategory="101"
        android:title="@string/sort_dd"
        app:showAsAction="never" />
    <item
        android:id="@+id/da"
        android:orderInCategory="102"
        android:title="@string/sort_da"
        app:showAsAction="never" />
    <item
        android:id="@+id/ld"
        android:orderInCategory="103"
        android:title="@string/sort_ld"
        app:showAsAction="never" />
    <item
        android:id="@+id/vd"
        android:orderInCategory="104"
        android:title="@string/sort_vd"
        app:showAsAction="never" />
</menu>